--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "ensembl-rest-client",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "A client for the Ensembl REST API using the axios requests library.",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
+    "commit": "git-cz",
     "test": "gulp test",
-    "build": "gulp build"
+    "build": "gulp build",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,8 @@
   "homepage": "https://github.com/peatroot/ensembl-rest-client",
   "devDependencies": {
     "chai": "^3.5.0",
+    "commitizen": "2.9.6",
+    "cz-conventional-changelog": "2.0.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-gzip": "^1.4.0",
@@ -36,10 +40,14 @@
     "gulp-watch": "^4.3.11",
     "jshint": "^2.9.4",
     "mocha": "^3.2.0",
+    "semantic-release": "^6.3.2",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0"
   },
   "dependencies": {
     "axios": "^0.16.0"
+  },
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog"
   }
 }
